--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -13,6 +13,9 @@
   --dark-border-color: #333;
 
   --transition: 0.5s ease-in-out;
+
+  --light-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  --dark-box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1);
 }
 
 * {
@@ -27,8 +30,8 @@ html {
 }
 
 body {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: var(--dark-text-color);
+  color: var(--dark-bg-color);
   transition: var(--transition);
   height: 100vh;
   padding-top: 80px;
@@ -49,15 +52,15 @@ header,
   z-index: 10;
   position: fixed;
   top: 0;
-  background-color: #ffffff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  background-color: var(--dark-text-color);
+  box-shadow: var(--light-box-shadow);
   transition: var(--transition);
 }
 
 body.dark-theme header,
 body.dark-theme .navbar {
-  background-color: var(--dark-neutral-color);
-  box-shadow: 0 5px 10px rgba(255, 255, 255, 0.1);
+  background-color: var(--dark-bg-color);
+  box-shadow: var(--dark-box-shadow);
 }
 
 .navbar {
@@ -119,12 +122,12 @@ body.dark-theme .right-container .auth-container a:last-child {
 
 .right-container .auth-container a:first-child:hover {
   background-color: var(--secondary-color);
-  color: #ffffff;
+  color: var(--dark-text-color);
 }
 
 .right-container .auth-container a:last-child:hover {
   background-color: var(--primary-color);
-  color: #ffffff;
+  color: var(--dark-text-color);
 }
 
 .theme-toggler {
@@ -176,7 +179,6 @@ body.dark-theme .sidebar h2 {
   color: var(--dark-text-color);
 }
 
-/* Category Checkbox Styling */
 .filter-form {
   display: flex;
   flex-direction: column;
@@ -203,7 +205,7 @@ body.dark-theme legend {
 label {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   gap: 0.5rem;
   font-size: 1rem;
   color: #333;
@@ -326,8 +328,8 @@ body.dark-theme .create-post form label {
 .create-post form .categories {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
-  padding: 1rem;
+  column-gap: 1rem;
+  padding: 0.5rem;
 }
 
 .create-post form .categories label {
@@ -346,7 +348,7 @@ body.dark-theme .create-post form label {
   align-self: flex-start;
   padding: 0.75rem 1.5rem;
   background-color: var(--primary-color);
-  color: #ffffff;
+  color: var(--dark-text-color);
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -373,8 +375,12 @@ body.dark-theme .create-post form label {
   justify-content: center;
   font-size: 1.5rem;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--light-box-shadow);
   transition: transform 0.3s ease-in-out;
+}
+
+body.dark-theme .floating-create-post-btn {
+  box-shadow: var(--dark-box-shadow);
 }
 
 .floating-create-post-btn:hover {
@@ -410,17 +416,17 @@ body.dark-theme .post-header {
 }
 
 .post {
-  background-color: #fff;
+  background-color: #f9f9f9;
   padding: 1rem;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--light-box-shadow);
   margin-bottom: 1rem;
   transition: var(--transition);
 }
 
 body.dark-theme .post {
   background-color: var(--dark-neutral-color);
-  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+  box-shadow: var(--dark-box-shadow);
 }
 
 .post img {
@@ -452,7 +458,7 @@ body.dark-theme .post p {
 .post-category span {
   font-size: 0.9rem;
   background-color: var(--utility-color);
-  color: #ffffff;
+  color: var(--dark-text-color);
   padding: 0.25rem 0.5rem;
   margin: 0.5rem 0;
   font-weight: 500;
@@ -556,12 +562,12 @@ body.dark-theme .session-status {
   margin: 0.5rem 0;
   font-size: 1rem;
   font-weight: bold;
-  color: #ffffff;
+  color: var(--dark-text-color);
   background-color: var(--secondary-color);
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color var(--transition);
+  transition: var(--transition);
 }
 
 .logout-button:hover {
@@ -607,7 +613,7 @@ body.dark-theme .comments-section h4 {
   color: #333;
   padding: 0.5rem;
   border-radius: 8px;
-  background: #ffffff;
+  background: var(--dark-text-color);
   border: 1px solid #ddd;
 }
 
@@ -643,7 +649,7 @@ body.dark-theme .comment-box {
 
 .submit-comment {
   background-color: var(--primary-color);
-  color: white;
+  color: var(--dark-text-color);
   border: none;
   padding: 0.5rem 1rem;
   border-radius: 4px;
